--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -80,6 +80,9 @@
         </aside>
         <!-- End of Sidebar Section -->
 
+
+
+
         <!-- Main Content -->
         <main>
             <div class="new-users">
@@ -88,7 +91,58 @@
                     <head>
                         <title></title>
                     </head>
-
+                    <h1>Analytics</h1>
+                    <!-- Analyses -->
+                    <div class="analyse">
+                        <div class="sales">
+                            <div class="status">
+                                <div class="info">
+                                    <h3>Total Users</h3>
+                                    <h1>5</h1>
+                                </div>
+                                <div class="progresss">
+                                    <svg>
+                                        <circle cx="38" cy="38" r="36"></circle>
+                                    </svg>
+                                    <div class="percentage">
+                                        <p>+70%</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="visits">
+                            <div class="status">
+                                <div class="info">
+                                    <h3>Total Bookings</h3>
+                                    <h1>15</h1>
+                                </div>
+                                <div class="progresss">
+                                    <svg>
+                                        <circle cx="38" cy="38" r="36"></circle>
+                                    </svg>
+                                    <div class="percentage">
+                                        <p>15%</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="searches">
+                            <div class="status">
+                                <div class="info">
+                                    <h3>Total Results</h3>
+                                    <h1>14</h1>
+                                </div>
+                                <div class="progresss">
+                                    <svg>
+                                        <circle cx="38" cy="38" r="36"></circle>
+                                    </svg>
+                                    <div class="percentage">
+                                        <p>+20%</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
 
 
